Fix nav anchor links being hidden under fixed nav bar

--- a/css/main.css
+++ b/css/main.css
@@ -75,6 +75,7 @@ main {
 
 section {
   margin-bottom: 5rem;
+  scroll-margin-top: 72px;
 }
 
 hr.divider {
